--- a/templates/customer/form_customer.html
+++ b/templates/customer/form_customer.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Client information</h1>
     <div class="container">
-      <form class="" action="index.html" method="post">
+      <form class="" action="{% url 'customer:customer_info_view' %}" method="POST">
+        {% csrf_token %}
         {{form.as_p}}
-        
         <input type="submit" class="btn btn-primary" value="Continue">
       </form>
     </div>
