--- a/templates/customer/form_plan.html
+++ b/templates/customer/form_plan.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Plan information</h1>
     <div class="container">
-      <form class="" action="index.html" method="post">
-        {{form.as_p}}
+      <form class="" method="post">
+        {{ form.as_p }}
 
         <input type="submit" class="btn btn-primary" value="Continue">
       </form>
