--- a/templates/customer/index.html
+++ b/templates/customer/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,5 +8,8 @@
   <body>
 <h1>welcome to home page!</h1>
 <h2>go to formage to fill out the form</h2>
+{% block content %}
+
+{% endblock %}
   </body>
 </html>
