--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,4 +1,35 @@
 
+main{
+  height: 100vh;
+    max-height: 100vh;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+#contentContainer { 
+    padding: 2rem;
+    margin-top: 5rem;
+    /* add a margin-bottom here to prevent content from going under the footer */
+    margin-bottom: 5rem;
+}
+
+/* add this to fix an issue with scrolling on mobile devices */
+main::-webkit-scrollbar {
+  width: 12px;
+}
+
+main::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+main::-webkit-scrollbar-thumb {
+  background-color: #999;
+  border-radius: 6px;
+  border: 2px solid #f5f5f5;
+}
+
+main::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
  
   .dropdown-toggle { outline: 0; }
   
