--- a/contact/templates/contact_form.html
+++ b/contact/templates/contact_form.html
@@ -1,73 +1,124 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Contact Information</h1>
-    <div class="container">
-      <form class=""   method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-      
-  
-        {% if form.non_field_errors %}
-      <div class="alert alert-danger">
-        {{ form.non_field_errors }}
-      </div>
+{% extends "_includes/base.html" %}
+
+{% load static %}
+
+{% block head_title %}{{ title }}{% endblock %}
+
+{% block top_nav %}
+<div class="d-flex justify-content-end mt-3">
+  <div class="w-100 mr-3">
+    Contacts / New Contact
+
+    <h2>{{ title }}</h2>
+  </div>
+  <div class="bordered-form d-flex align-items-center">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search" aria-label="Search"
+        oninput="searchFunction()">
+    </form>
+    <span class="material-symbols-outlined notifications-icon align-middle">notifications</span>
+    <span class="material-symbols-outlined align-middle">settings</span>
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+      </a>
+      <ul class="dropdown-menu text-small shadow">
+        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
+        <li><a class="dropdown-item" href="#">Log out</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block side_nav %}
+{% include '_includes/sidebar.html' %}
+{% endblock %}
+
+{% block content %}
+
+<div class="container">
+  <div class="header">
+    <h1>New Contact</h1>
+  </div>
+  <form class="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+
+    {% if form.non_field_errors %}
+    <div class="alert alert-danger">
+      {{ form.non_field_errors }}
+    </div>
     {% endif %}
-    <div class="form-group">
-      <label for="{{ form.name.id_for_label }}">Name :</label>
-      {{ customer_info_form.name }}
+    <div class="form-group d-flex justify-content-between align-items-center">
+      <div>
+        <label for="{{ form.name.id_for_label }}">Name:</label>
+        {{ customer_info_form.name }}
 
-    </div>
-    <div class="form-group">
-      <label for="{{ form.designation.id_for_label }}">Designation</label>
-      {{ customer_info_form.designation }}
-      
-    </div>
-    <div class="form-group">
-      <label for="{{ customer_info_form.organization.id_for_label }}">Organization</label>
-      {{ customer_info_form.organization }}
-      
-    </div>
-    <div class="form-group">
-      <label for="{{ customer_info_form.mobile_number.id_for_label }}">Mobile Number</label>
-      {{ customer_info_form.mobile_number }}
-      
-    </div>
-    <div class="form-group">
-      <label for="{{ customer_info_form.alt_number.id_for_label }}">Alt Mobile Number</label>
-      {{ customer_info_form.alt_number }}
-      
-    </div>
-    <div class="form-group">
-      <label for="{{ customer_info_form.email_id.id_for_label }}">Email ID</label>
-      {{ customer_info_form.email_id }}
-      
-    </div>
-    <div class="form-group">
-      <label for="{{ customer_info_form.address.id_for_label }}">Address</label>
-      {{ customer_info_form.address }}
-      
-      <div class="form-group">
-      <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
-      <input type="file" name="{{ form.profile_picture.html_name }}" id="{{ form.profile_picture.id_for_label }}">
+        <label for="{{ form.designation.id_for_label }}" class="mt-2">Designation:</label>
+        {{ customer_info_form.designation }}
       </div>
-    
-        <input type="submit" class="btn btn-primary" value="Save Contact">
-        <input type="submit" class="btn" value="Cancel">
-      </form>
+
+      {% comment %} <button class="btn btn-outline-secondary capture-btn" type="button" onclick="captureImage()">
+        <svg class="bi" width="24" height="24">
+          <span class="material-symbols-outlined icon-pic" style="font-size: 5rem;">
+            add_a_photo
+
+          </span>
+          <div style="font-size: 0.8rem;">Upload Current Picture</div>
+        </svg>
+      </button>
+
+      <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
+      {{ customer_info_form.profile_picture }} {% endcomment %}
     </div>
-  </body>
-</html>
+    <div class="form-group">
+      <label for="{{ customer_info_form.organization.id_for_label }}">Organization:</label>
+      {{ customer_info_form.organization }}
+    </div>
 
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="{{ customer_info_form.mobile_number.id_for_label }}">Mobile Number:</label>
+          {{ customer_info_form.mobile_number }}
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="{{ customer_info_form.alt_number.id_for_label }}">Alternate Mobile Number:</label>
+          {{ customer_info_form.alt_number }}
+        </div>
+      </div>
+    </div>
 
+    <div class="form-group">
+      <label for="{{ customer_info_form.email_id.id_for_label }}">Email ID:</label>
+      {{ customer_info_form.email_id }}
+    </div>
+    <div class="form-group">
+      <label for="address">Address:</label>
+      <textarea id="address" name="address" class="form-control" required></textarea>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Save Contact</button>
+      <button type="button" class="btn btn-secondary cancel-btn">Cancel</button>
+    </div>
+  </form>
+</div>
+{% comment %} <script>
+  function captureImage() {
+    // Your logic to handle capturing image and navigating to system files
+    // Example: Use input type file and trigger click event
+    var input = document.createElement('input');
+    input.type = 'file';
+    input.accept = 'image/*';
+    input.click();
+  }
+</script> {% endcomment %}
 
-
-    
+{% endblock %}
