--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -33,7 +33,7 @@
         </li>
 
         <li>
-            <a href="{% url 'contact:list' %}" class="nav-link {% if active_tab == 'contact' %} active {% else %} link-body-emphasis {% endif %}">
+            <a href="{% url 'contact:contact_create_view' %}" class="nav-link {% if active_tab == 'contact' %} active {% else %} link-body-emphasis {% endif %}">
                 <i class="fa-solid fa-address-book me-2"></i>
                 Contacts
             </a>
