--- a/templates/_includes/base.html
+++ b/templates/_includes/base.html
@@ -27,7 +27,7 @@
     <!-- BOOTSTRAP EXAMPLES -->
     <link href="{% static 'css/sidebar.css' %}" rel="stylesheet" type="text/css">
 
-    <!-- FONTAWESOME -->
+    <!-- MATERIAL ICONS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
