--- a/templates/_includes/top_nav.html
+++ b/templates/_includes/top_nav.html
@@ -5,8 +5,8 @@
     </div>
     <div class="bordered-form d-flex align-items-center">
         <form class="form-inline">
-            <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search" aria-label="Search"
-                oninput="searchFunction()">
+            <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search" aria-label="Search" aria-describedby="search-addon" 
+                >
         </form>
         <span class="material-symbols-outlined notifications-icon align-middle">notifications</span>
         <span class="material-symbols-outlined align-middle">settings</span>
