--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -54,7 +54,7 @@
 
     <div class="form-group mb-3">
         <label for="address">Address:</label>
-        <textarea id="address" name="address" class="form-control" required></textarea>
+        {{ contact_form.address }}
     </div>
 
     <div class="form-group mb-3">
