--- a/contact/templates/contact/list_view.html
+++ b/contact/templates/contact/list_view.html
@@ -15,9 +15,10 @@
 {% block content %}
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <form class="w-auto">
+    <form class="w-auto" method="GET" action="{% url 'contact:list' %}">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Search" name="search">
+        <button type="submit" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Search">
         <span class="input-group-text" id="search-addon">
           <i class="fas fa-search"></i>
         </span>
@@ -67,6 +68,7 @@
         <td>
           <button type="button" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top"
             title="Edit contact">
+            <a href="{% url 'contact:edit' contact.id %}">
             <span class="material-symbols-outlined" style="font-size:24px;">
               edit_square
             </span>
