--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group mb-3">
-        <label for="address">Address:</label>
+        <label for="{{ contact_form.address.id_for_label }}">Address:</label>
         {{ contact_form.address }}
     </div>
 
