--- a/contact/templates/contact/list_view.html
+++ b/contact/templates/contact/list_view.html
@@ -17,7 +17,7 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <form class="w-auto" method="GET" action="{% url 'contact:list' %}">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="search">
+        <input type="text" class="form-control" placeholder="Search" name="search" value="{{ request.GET.search}}">
         <button type="submit" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Search">
         <span class="input-group-text" id="search-addon">
           <i class="fas fa-search"></i>
