--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -15,63 +15,65 @@
 {% block content %}
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-3">
-  <form class="w-auto" method="GET" action="{% url 'customer:list' %}">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search" name="search" value="{{ request.GET.search}}">
-      <button type="submit" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Search">
-      <span class="input-group-text" id="search-addon">
-        <i class="fas fa-search"></i>
-      </span>
-    </div>
-  </form>
+    <form class="w-auto" method="GET" action="{% url 'customer:list' %}">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" name="search" value="{{ request.GET.search}}">
+        <button type="submit" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Search">
+          <span class="input-group-text" id="search-addon">
+            <i class="fas fa-search"></i>
+          </span>
+      </div>
+    </form>
     <a href="{% url 'customer:create' %}" class="btn btn-primary">
       <i class="fa-solid fa-plus me-2"></i>
       New customer
     </a>
   </div>
-<br>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th> </th>
-      <th>NAME</th>
-      <th>ADDRESS</th>
-      <th>Plan Details</th>
-      <th scope="col">ACTIONS</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for customer in customers %}
-    <tr>
-      <td>
-        {% if customer.profile_picture %}
-        <img src="{{ customer.profile_picture.url }}" alt="Profile Picture" width="50">
-        {% else %}
-        <img src="{% static 'default/image.png' %}" alt="Default Profile Picture" width="50">
-        {% endif %}
-      </td>
-      <td>{{ customer.legal_name }}<br>{{ customer.display_name }}</td>
+  <br>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th> </th>
+        <th>NAME</th>
+        <th>ADDRESS</th>
+        <th>Plan Details</th>
+        <th scope="col">ACTIONS</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for customer in customers %}
+      <tr>
+        <td>
+          {% if customer.profile_picture %}
+          <img src="{{ customer.profile_picture.url }}" alt="Profile Picture" width="50">
+          {% else %}
+          <img src="{% static 'default/image.png' %}" alt="Default Profile Picture" width="50">
+          {% endif %}
+        </td>
+        <td>{{ customer.legal_name }}<br>{{ customer.display_name }}</td>
 
-      <td>
-        {{ customer.address }}<br>{{ customer.city }}<br>{{ customer.state }}<br>{{ customer.country }}<br>{{ customer.zip_code }}
-      </td>
-      {% for plan in customer.plans.all %}
-      <td>{{ plan.subscription_plan }}<br>{{ plan.duration_in_months }}</td>
-      {% endfor %}
-      <td>
-        <button type="button" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top"
-          title="Edit contact">
-          
+        <td>
+          {{ customer.address }}<br>{{ customer.city }}<br>{{ customer.state }}<br>{{ customer.country }}<br>{{ customer.zip_code }}
+        </td>
+        <td>
+        {% for plan in customer.plans.all %}
+        {{ plan.subscription_plan }} ({{ plan.duration_in_months }})
+        {% endfor %}
+        </td>
+        <td>
+          <button type="button" class="btn btn-link p-0" data-bs-toggle="tooltip" data-bs-placement="top"
+            title="Edit contact">
+
             <a href="{% url 'customer:customer_edit' customer.uuid %}">
-          <span class="material-symbols-outlined" style="font-size:24px;">
-            edit_square
-          </span>
-        </button>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% include '_includes/pagination.html' %}
+              <span class="material-symbols-outlined" style="font-size:24px;">
+                edit_square
+              </span>
+          </button>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% include '_includes/pagination.html' %}
 
-{% endblock %}
+  {% endblock %}
