init contact, prospect ui

--- a/contact/templates/create_view.html
+++ b/contact/templates/create_view.html
@@ -16,7 +16,7 @@
 
 <div class="form-container">
   <div class="header">
-    <h1>New Contact</h1>
+    <h1 style="color: #0C0482">New Contact</h1>
   </div>
   {% include 'contact_form.html' %}
 </div>
