--- a/contact/templates/contact_form.html
+++ b/contact/templates/contact_form.html
@@ -11,54 +11,54 @@
 
         <div class="row">
             <div class="form-group mb-3">
-                <label for="{{ form.name.id_for_label }}">Name:</label>
+                <label for="{{ form.name.id_for_label }}" style="color: #0C0482">Name:</label>
                 {{ contact_form.name }}
             </div>
             <div class="form-group mb-3">
-                <label for="{{ form.designation.id_for_label }}" class="mt-2">Designation:</label>
+                <label for="{{ form.designation.id_for_label }}" class="mt-2" style="color: #0C0482">Designation:</label>
                 {{ contact_form.designation }}
             </div>
 
         </div>
 
         <div>
-            <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
+            <label for="{{ form.profile_picture.id_for_label }}" style="color: #0C0482">Upload Picture</label>
             {{ contact_form.profile_picture }}
         </div>
     </div>
     <div class="form-group mb-3">
-        <label for="{{ contact_form.organization.id_for_label }}">Organization:</label>
+        <label for="{{ contact_form.organization.id_for_label }}" style="color: #0C0482">Organization:</label>
         {{ contact_form.organization }}
     </div>
 
     <div class="row mb-3">
         <div class="col-md-6">
             <div class="form-group">
-                <label for="{{ contact_form.mobile_number.id_for_label }}">Mobile Number:</label>
+                <label for="{{ contact_form.mobile_number.id_for_label }}" style="color: #0C0482">Mobile Number:</label>
                 {{ contact_form.mobile_number }}
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="form-group">
-                <label for="{{ contact_form.alt_number.id_for_label }}">Alternate Mobile Number:</label>
+                <label for="{{ contact_form.alt_number.id_for_label }}" style="color: #0C0482">Alternate Mobile Number:</label>
                 {{ contact_form.alt_number }}
             </div>
         </div>
     </div>
 
     <div class="form-group mb-3">
-        <label for="{{ contact_form.email_id.id_for_label }}">Email ID:</label>
+        <label for="{{ contact_form.email_id.id_for_label }}" style="color: #0C0482">Email ID:</label>
         {{ contact_form.email_id }}
     </div>
 
     <div class="form-group mb-3">
-        <label for="address">Address:</label>
+        <label for="address" style="color: #0C0482">Address:</label>
         <textarea id="address" name="address" class="form-control" required></textarea>
     </div>
 
     <div class="form-group mb-3">
-        <button type="submit" class="btn btn-primary">Save Contact</button>
+        <button type="submit" class="btn btn-primary" style="color: #0C0482">Save Contact</button>
         <a href="{{ request.META.HTTP_REFERER }}" type="button" class="btn btn-secondary cancel-btn">Cancel</a>
     </div>
 
