--- a/templates/_includes/top_nav.html
+++ b/templates/_includes/top_nav.html
@@ -3,19 +3,20 @@
         Contacts / New Contact
         <h2>{{ title }}</h2>
     </div>
-    <div class="bordered-form d-flex align-items-center">
+    <div class="bordered-form d-flex align-items-center" style="border-radius: 50px; width:30%; box-shadow: 2px 2px 10px rgba(0,0,0,0.6);">
         <form class="form-inline">
-            <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search" aria-label="Search"
+            <input class="control mr-sm-2 bordered-input" style="border-radius: 50px; font-size: 1rem; padding: 0.3rem 0.5rem;" type="search" placeholder="Search" aria-label="Search" 
                 oninput="searchFunction()">
         </form>
-        <span class="material-symbols-outlined notifications-icon align-middle">notifications</span>
-        <span class="material-symbols-outlined align-middle">settings</span>
+        <span class="material-symbols-outlined notifications-icon align-middle" style="font-size: 1.5rem; padding: 0.2rem;"></span>
+        <span class="material-symbols-outlined align-middle" style="font-size: 1.5rem; padding: 0.2rem;">notifications</span>
+        <span class="material-symbols-outlined align-middle" style="font-size: 1.5rem; padding: 0.2rem;"></span>
+        <span class="material-symbols-outlined" style="font-size: 1.5rem; padding: 0.2rem;">settings</span>
         <div class="dropdown">
-            <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+            <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2" style="padding: 0.2rem;">
             </a>
-            <ul class="dropdown-menu text-small shadow">
+            <ul class="dropdown-menu text-small shadow" style="font-size: 0.8rem;">
                 <li><a class="dropdown-item" href="#">Settings</a></li>
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li>
