--- a/templates/prospect/create_view.html
+++ b/templates/prospect/create_view.html
@@ -7,32 +7,34 @@
 
 {% block top_nav %}
 <div class="d-flex justify-content-end mt-3">
-<div class="w-100 mr-3">
+<div class="w-100 mr-3" style="color: #0C0482">
     Prospect Overview / New Prospect
     <h2>{{ title }}</h2>
 </div>
 
-    <div class="bordered-form d-flex align-items-center">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2 bordered-input" type="search" placeholder="Search"
-        aria-label="Search" oninput="searchFunction()">
-        </form>
-        <span class="material-symbols-outlined notifications-icon align-middle">notifications</span>
-        <span class="material-symbols-outlined align-middle">settings</span>
-        <div class="dropdown">
-            <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32"
-                    class="rounded-circle me-2">
-            </a>
-            <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Log out</a></li>
-            </ul>
-        </div>
+<div class="bordered-form d-flex align-items-center" style="border-radius: 50px; box-shadow: 2px 2px 10px rgba(0,0,0,0.6);">
+    <form class="form-inline">
+        <input class="control mr-sm-2 bordered-input" style="border-radius: 50px; font-size: 1rem; padding: 0.3rem 0.5rem;" type="search" placeholder="Search" aria-label="Search" 
+            oninput="searchFunction()">
+    </form>
+    <span class="material-symbols-outlined notifications-icon align-middle" style="font-size: 1.5rem; padding: 0.2rem;"></span>
+    <span class="material-symbols-outlined align-middle" style="font-size: 1.5rem; padding: 0.2rem;">notifications</span>
+    <span class="material-symbols-outlined align-middle" style="font-size: 1.5rem; padding: 0.2rem;"></span>
+    <span class="material-symbols-outlined" style="font-size: 1.5rem; padding: 0.2rem;">settings</span>
+    <div class="dropdown">
+        <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2" style="padding: 0.2rem;">
+        </a>
+        <ul class="dropdown-menu text-small shadow" style="font-size: 0.8rem;">
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Log out</a></li>
+        </ul>
     </div>
+</div>
 </div>
 {% endblock %}
 
@@ -98,15 +100,14 @@
         .container-fluid {
 			margin-top: 100px;
 			margin-bottom: 100px;
-            background-color: #f2f2f2;
 			padding-left: 15px;
 			padding-right: 15px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 		}
 		.centered {
 			position: absolute;
-			top: 80%;
-			left: 60%;
+			top: 70%;
+			left: 55%;
 			transform: translate(-50%, -50%);
 		}
 </style>
@@ -115,69 +116,69 @@
     
     <div class="container-fluid">
         <form>
-            <h3>Prospect Information</h3>
+            <h3 style="color: #0C0482">Prospect Information</h3>
             <div class="row">
                 <div class="form-group">
-                    <label for="name">Name *</label>
+                    <label for="name" style="color: #0C0482" >Name *</label>
                     <input type="text" class="form-control" id="name" placeholder="Enter name" required>
                     <div id="name-error" class="invalid-feedback">Name is required.</div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="street">Street/Locality</label>
+                        <label for="street" style="color: #0C0482">Street/Locality</label>
                         <input type="text" class="form-control" id="street" placeholder="Enter street">
                     </div>
                     <div class="form-group">
-                        <label for="country">Country</label>
+                        <label for="country" style="color: #0C0482">Country</label>
                         <input type="text" class="form-control" id="country" placeholder="Enter country">
                     </div>
                     <div class="form-group">
-                        <label for="email">Email ID</label>
+                        <label for="email" style="color: #0C0482">Email ID</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="denomination">Denomination</label>
+                        <label for="denomination" style="color: #0C0482">Denomination</label>
                         <input type="text" class="form-control" id="denomination" placeholder="Enter denomination">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="city">City/Town/Village</label>
+                        <label for="city" style="color: #0C0482">City/Town/Village</label>
                         <input type="text" class="form-control" id="city" placeholder="Enter city">
                     </div>
                     <div class="form-group">
-                        <label for="state">State</label>
+                        <label for="state" style="color: #0C0482">State</label>
                         <input type="text" class="form-control" id="state" placeholder="Enter state">
                     </div>
                     <div class="form-group">
-                        <label for="website">Website</label>
+                        <label for="website" style="color: #0C0482">Website</label>
                         <input type="url" class="form-control" id="website" placeholder="Enter website">
                     </div>
                     <div class="form-group">
-                        <label for="congregation-size">Congregation Size (Approx)</label>
+                        <label for="congregation-size" style="color: #0C0482">Congregation Size (Approx)</label>
                         <input type="number" class="form-control" id="congregation-size" placeholder="Enter congregation size">
                     </div>
                 </div>
                 <hr style="border: 5px solid #0b0b0b;">
-                <h3>New contact</h3>
+                <h3 style="color: #0C0482">New contact</h3>
                 <div class="form-group">
-                    <label for="Name">Name</label>
-                    <input type="text" class="form-control" id="Name" placeholder="Enter name">
+                    <label for="Name" style="color: #0C0482">Name</label>
+                    <input type="text" style="color: #0C0482" class="form-control" id="Name" placeholder="Enter name">
                 </div>
                 <div class="col-md-6">
                 <div class="form-group">
-                    <label for="mobile">Mobile Number</label>
+                    <label for="mobile" style="color: #0C0482">Mobile Number</label>
                     <input type="tel" class="form-control" id="mobile" placeholder="Enter mobile number">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="email">email ID</label>
+                    <label for="email" style="color: #0C0482">email ID</label>
                     <input type="text" class="form-control" id="email" placeholder="Enter email id">
                 </div>
             </div>
                 <div class="form-group">
-                    <label for="remarks">Remarks</label>
+                    <label for="remarks" style="color: #0C0482">Remarks</label>
                     <textarea class="form-control" id="remarks" rows="3"></textarea>
                 </div>
                 
